# education-agent

./: README.md  attachment_example.py  basic_example.py  creation-prompt.md  main.py  pyproject.toml  stock_tool_example.py  web_search_example.py
docs/: prompt-to-create-creation-prompt.md
